# lecture-testing-task

.github/workflows/: c-cpp.yml
05_hw/: CMakeLists.txt  README.md  becnhmarks.c  main.c  stack.c  stack.h  tests.c
05_hw/.github/workflows/: windows-ci.yml
